modify fp-ts eq

--- a/_posts/2022-06-01-fp-ts-1.md
+++ b/_posts/2022-06-01-fp-ts-1.md
@@ -102,7 +102,7 @@ elem(eqNumber)(4, [1, 2, 3]) // false
 
 ```scala
 def elem[A](a: A, as: Seq[A])(implicit E: Eq[A]): Boolean = {
-  as.contains(item => E.equals(item, a))
+  as.exists(item => E.equals(item, a))
 }
 
 elem(1, Seq(1, 2, 3)) // true
